--- a/langbite/src/main/resources/com/language/flashcards.fxml
+++ b/langbite/src/main/resources/com/language/flashcards.fxml
@@ -5,17 +5,19 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Region?>
 
 <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="400.0" spacing="15" style="-fx-background-color: #f5f5f5;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <!-- Header Section -->
     <HBox alignment="CENTER" spacing="10" style="-fx-background-color: #649a38; -fx-padding: 15; -fx-border-radius: 10;">
-        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" HBox.alignment="LEFT">
+        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
             <Image url="@images/backarrow.png" />
         </ImageView>
+        <Region HBox.hgrow="ALWAYS" />
         <Label style="-fx-font-size: 53px; -fx-text-fill: white;" styleClass="title" text="Flashcards" />
+        <Region HBox.hgrow="ALWAYS" />
     </HBox>
 
     <!-- Progress Section -->
@@ -40,30 +42,27 @@
 
     <!-- Footer Navigation Hub -->
     <HBox alignment="CENTER" prefHeight="30.0" prefWidth="400.0" spacing="40" style="-fx-background-color: #649a38; -fx-padding: 3; -fx-border-radius: 0;" VBox.vgrow="ALWAYS">
-   
+        
         <VBox alignment="CENTER" spacing="5">
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@images/store_icon.png" />
             </ImageView>
             <Label style="-fx-text-fill: white; -fx-font-size: 13px;" text="Store" />
         </VBox>
-
-       
+    
         <VBox alignment="CENTER" spacing="5">
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@images/settings_icon.png" />
             </ImageView>
             <Label style="-fx-text-fill: white; -fx-font-size: 13px;" text="Settings" />
         </VBox>
-
-
+      
         <VBox alignment="CENTER" spacing="5">
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@images/home_icon.png" />
             </ImageView>
             <Label style="-fx-text-fill: white; -fx-font-size: 13px;" text="Home" />
         </VBox>
-
  
         <VBox alignment="CENTER" spacing="5">
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
@@ -71,8 +70,7 @@
             </ImageView>
             <Label style="-fx-text-fill: white; -fx-font-size: 13px;" text="Favorites" />
         </VBox>
-
-
+   
         <VBox alignment="CENTER" spacing="5">
             <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                 <Image url="@images/profile_icon.png" />
